--- a/App.css
+++ b/App.css
@@ -8,6 +8,115 @@ html {
   font-size: 62.5%;
 }
 
+body{
+  background-image: url("./assets/background.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+header {
+  display: flex;
+  width: 100%;
+  height: 15vh;
+  margin: auto;
+  background: #07224e;
+}
+
+.logo-container {
+  color: white;
+  display: flex;
+  flex: 2;
+  margin: 1rem;
+}
+#logo {
+  height: 100%;
+}
+.app-name {
+  font-size: 2rem;
+  font-weight: 600;
+  text-align: center;
+  margin: auto;
+}
+
+.search-form {
+  padding: 0rem 2rem;
+  display: flex;
+  height: 100%;
+  flex: 4;
+  justify-content: space-around;
+}
+.search-bar {
+  font-size: 1.5rem;
+  flex: 3;
+  margin: auto;
+  height: 50%;
+  width: 50%;
+  border: none;
+  border-radius: 3px;
+  box-shadow: 0 0 2px black;
+}
+.search-button{
+  font-size: 1.5rem;
+  font-weight: 400;
+  color: white;
+  margin: auto;
+  height: 50%;
+  width: 50%;
+  background: lightseagreen;
+  border: none;
+  border-radius: 3px;
+  box-shadow: 0 0 2px white;
+  flex: 1;
+  cursor: pointer;
+}
+.search-button:hover {
+  text-shadow: 0 0 3px white;
+}
+
+.change-src {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  border-radius: 5px;
+}
+.change-src a {
+  font-size: 1rem;
+  margin: auto;
+  width: 50%;
+  height: 90%;
+  background-image: url("./assets/touka_manga.png");
+  background-size: cover;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 0 0 2px white;
+  color: white;
+  text-decoration: none;
+}
+.change-src a:hover {
+  box-shadow: 0 0 5px white;
+}
+
+.user-list {
+  height: 15vh;
+  background: lightskyblue;
+}
+.user-list li {
+  list-style: none;
+}
+.user-list li a:link {
+  font-size: 2rem;
+  font-weight: 400;
+  text-decoration: none;
+}
+
+.anime-gallery, .manga-gallery {
+  color: white;
+}
+
 .anime-list, .manga-list {
   display: flex;
+}
+
+.anime, .manga {
+  margin: 1rem;
 }
