--- a/App.css
+++ b/App.css
@@ -19,7 +19,7 @@ header {
   width: 100%;
   height: 15vh;
   margin: auto;
-  background: #07224e;
+  background: rgb(19, 42, 82);
 }
 
 .logo-container {
@@ -53,16 +53,16 @@ header {
   width: 50%;
   border: none;
   border-radius: 3px;
-  box-shadow: 0 0 2px black;
+  box-shadow: 0 0 2px white;
 }
 .search-button{
-  font-size: 1.5rem;
+  font-size: 2rem;
   font-weight: 400;
   color: white;
   margin: auto;
   height: 50%;
   width: 50%;
-  background: lightseagreen;
+  background: rgb(77, 171, 110);
   border: none;
   border-radius: 3px;
   box-shadow: 0 0 2px white;
@@ -71,6 +71,11 @@ header {
 }
 .search-button:hover {
   text-shadow: 0 0 3px white;
+  opacity: 0.8;
+}
+.submit-icon {
+  opacity: 0.7;
+  height: 60%;
 }
 
 .change-src {
@@ -83,7 +88,7 @@ header {
   font-size: 1rem;
   margin: auto;
   width: 50%;
-  height: 90%;
+  height: 80%;
   background-image: url("./assets/touka_manga.png");
   background-size: cover;
   border: none;
@@ -94,29 +99,71 @@ header {
 }
 .change-src a:hover {
   box-shadow: 0 0 5px white;
+  opacity: 0.8;
 }
 
 .user-list {
+  margin-top: 1vh;
   height: 15vh;
-  background: lightskyblue;
+  display: flex;
+  color: rgb(232, 218, 176);
 }
-.user-list li {
+.user-list-title {
+  padding: 5.5vh 3vh;
+}
+.user-panels {
+  margin: 0vh 1vh;
+  padding: 2vh;
+  width: fit-content;
   list-style: none;
+  background: rgba(255, 255, 255, 0.7);
+  border-radius: 5px;
+  display: block;
 }
-.user-list li a:link {
+.user-list li a:link, .user-list li a:visited {
+  color: rgb(19, 42, 82);
   font-size: 2rem;
   font-weight: 400;
   text-decoration: none;
 }
+.user-img {
+  height: 50%;
+  margin: auto;
+}
 
 .anime-gallery, .manga-gallery {
+  margin-top: 1vh;
+  color: rgb(232, 218, 176);
+  height: fit-content;
+}
+.gallery-title {
+  margin: 0px 10px;
+}
+.gallery-container {
+  display: flex;
+}
+.next-btn, .prev-btn {
+  height: 20vh;
+  width: 10vh;
+  margin: auto;
+  border: none;
+  background: rgba(26, 52, 97, 0.6);
   color: white;
+  font-size: 3rem;
+}
+.next-btn:hover, .prev-btn:hover {
+  background: rgb(26, 52, 97, 0.7);
 }
 
 .anime-list, .manga-list {
   display: flex;
 }
-
 .anime, .manga {
+  background: rgba(77, 171, 110, 0.8);
+  padding: 1rem;
   margin: 1rem;
+}
+.anime-title {
+  width: fit-content;
+  margin: 1vh auto;
 }
