--- a/src/App.css
+++ b/src/App.css
@@ -48,11 +48,10 @@ header {
 .search-bar {
   font-size: 1.5rem;
   flex: 3;
+  padding: 5px;
   margin: auto;
   height: 50%;
   width: 50%;
-  border: none;
-  border-radius: 3px;
   box-shadow: 0 0 2px white;
 }
 .search-button{
@@ -63,8 +62,6 @@ header {
   height: 50%;
   width: 50%;
   background: rgb(77, 171, 110);
-  border: none;
-  border-radius: 3px;
   box-shadow: 0 0 2px white;
   flex: 1;
   cursor: pointer;
@@ -82,46 +79,45 @@ header {
   flex: 1;
   display: flex;
   justify-content: center;
-  border-radius: 5px;
 }
 .change-src a {
   font-size: 1rem;
   margin: auto;
-  width: 50%;
-  height: 80%;
-  background-image: url("./assets/touka_manga.png");
-  background-size: cover;
-  border: none;
-  border-radius: 5px;
-  box-shadow: 0 0 2px white;
-  color: white;
-  text-decoration: none;
+  width: 30%;
+  height: 60%;
+  display: flex;
 }
 .change-src a:hover {
-  box-shadow: 0 0 5px white;
   opacity: 0.8;
+}
+.change-src-img {
+  margin: auto;
+  width: 60%;
 }
 
 .user-list {
   margin-top: 1vh;
   height: 15vh;
   display: flex;
-  color: rgb(232, 218, 176);
 }
 .user-list-title {
-  padding: 5.5vh 3vh;
+  flex: 1;
+  padding: 5.5vh 1.5vw;
+}
+.users-container {
+  flex: 8;
+  display: flex;
 }
 .user-panels {
   margin: 0vh 1vh;
   padding: 2vh;
   width: fit-content;
+  height: 100%;
   list-style: none;
-  background: rgba(255, 255, 255, 0.7);
-  border-radius: 5px;
+  background: rgba(26, 52, 97, 0.7);
   display: block;
 }
 .user-list li a:link, .user-list li a:visited {
-  color: rgb(19, 42, 82);
   font-size: 2rem;
   font-weight: 400;
   text-decoration: none;
@@ -130,26 +126,45 @@ header {
   height: 50%;
   margin: auto;
 }
+.clear-users-ctr {
+  display: flex;
+  flex: 1;
+}
+.clear-users {
+  width: 40px;
+  height: 40px;
+  margin: auto;
+  font-size: 1.5rem;
+  background: rgba(26, 52, 97, 0.6);
+}
+.clear-users:hover {
+  background: rgba(26, 52, 97, 0.7);
+}
 
 .anime-gallery, .manga-gallery {
-  margin-top: 1vh;
-  color: rgb(232, 218, 176);
+  margin-top: 2vh;
   height: fit-content;
 }
 .gallery-title {
-  margin: 0px 10px;
+  margin: 0px 1.5vw;
 }
 .gallery-container {
+  margin: 2rem 0rem;
   display: flex;
+}
+.empty-gallery-text {
+  margin: auto;
+  padding: 5px;
+  text-align: center;
+  font-size: 2.5rem;
+  background: rgba(26, 52, 97, 0.8);
 }
 .next-btn, .prev-btn {
   height: 20vh;
-  width: 10vh;
+  width: 5vw;
   margin: auto;
-  border: none;
   background: rgba(26, 52, 97, 0.6);
-  color: white;
-  font-size: 3rem;
+  font-size: 4rem;
 }
 .next-btn:hover, .prev-btn:hover {
   background: rgb(26, 52, 97, 0.7);
@@ -159,11 +174,33 @@ header {
   display: flex;
 }
 .anime, .manga {
-  background: rgba(77, 171, 110, 0.8);
+  background: rgba(0,0,0, 0.8);
   padding: 1rem;
   margin: 1rem;
+  width: 18vw;
 }
-.anime-title {
+.anime-url {
+  color: inherit;
+  text-decoration: none;
+}
+.anime-title, .manga-title {
   width: fit-content;
   margin: 1vh auto;
+}
+.anime-img, .manga-img {
+  margin: auto;
+  width: 100%;
+  max-height: 50vh;
+}
+
+/*Color Schemes*/
+.user-list, .user-list li a:link, .user-list li a:visited,
+.clear-users, .anime-gallery, .manga-gallery,
+.next-btn, .prev-btn {
+  color: rgb(232, 218, 176);
+}
+
+.soft-borders {
+  border: none;
+  border-radius: 5px;
 }
